--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,191 @@
+*{
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+}
 
+body{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: black;
+}
+
+header{
+    background-color: black;
+    width: 100%;
+    height: 4.5em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: height 0.55s ease-in-out;
+    position: sticky;
+    top: 0;
+
+    animation-duration: 5s;
+    animation-name: header_welcoming;
+}
+  
+
+@keyframes header_welcoming{
+    0% {
+        height: 50em;   
+    }
+    50% {
+        height: 50em;
+    }
+    100% {
+        height: 4.5em;
+    }
+}
+
+header:hover{
+    height: 5em;
+}
+
+header img{
+    width: 4em;
+    margin-left: 15px;
+    border-color: white;
+    border-width: 0.1em;
+    border-style: solid;
+    border-radius: 0.65em;
+    transition: width 0.45s ease-in-out;
+    
+}
+
+header img:hover{
+    width: 4.2em;
+}
+
+header p{
+    width: 75%;
+    display: flex;
+    justify-content: space-evenly;
+
+    animation-duration: 10s;
+    animation-name: nav;
+}
+
+@keyframes nav{
+    0% {
+        display: none;
+    }
+    50% {
+        display: none;
+    }
+    75% {
+        display: contents;
+    }
+}
+
+header p a{
+    justify-content: space-evenly;
+    color: rgb(255, 255, 255);  
+    text-decoration: none;
+    font-size: 20px;
+    padding: 0.5em 1em;
+    border-radius: 1.5em;
+    transition: color 0.25s ease-in-out, background-color 0.35s ease-in-out, font-size 0.75s ease-in-out, padding 0.45s ease-in-out;
+}
+
+header p a:hover{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(200, 200, 200);
+    color:black;
+    font-size: 23px;
+    padding: 0.5em 1.5em;
+}
+
+header div {
+    width: 18%;
+}
+
+header div img{
+    margin-left: 0;
+    width:45px;
+    margin: 2%;
+    transition: width 0.45s ease-in-out;
+}
+
+header div img:hover{
+    width: 47px
+}
+
+header div #github img{
+    border-color: black;
+}
+
+
+
+
+    
+
+main{
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    height: 85em;
+    border-radius: 25px 25px 5px 5px;
+
+    animation-duration: 3s;
+    animation-name: welcoming;
+}
+
+@keyframes welcoming {
+    0%{
+        height: 75em;
+    }
+    25%{
+        height: 75em;
+    }
+
+    100%{
+        height: 85em;
+    }  
+}
+
+h1{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 3em;
+    margin-bottom: 0;
+}
+
+section{
+    width: 75%;
+}
+
+
+article{
+    background-color: rgb(245, 245, 245);
+    width: 80%;
+    border-width: 0.1em;
+    border-style: solid;
+    border-radius: 0.65em;
+    margin: 2em;
+    padding: 2em;
+}
+
+article img{
+    width : 10em;
+}
+
+h2{
+    display: flex;
+    justify-content: center;
+    margin: 1em;
+}
+
+
+
+footer{
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 5em;
+    color: white;
+}   
