--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,22 +20,6 @@ header{
     transition: height 0.55s ease-in-out;
     position: sticky;
     top: 0;
-
-    animation-duration: 5s;
-    animation-name: header_welcoming;
-}
-  
-
-@keyframes header_welcoming{
-    0% {
-        height: 50em;   
-    }
-    50% {
-        height: 50em;
-    }
-    100% {
-        height: 4.5em;
-    }
 }
 
 header:hover{
@@ -61,21 +45,6 @@ header p{
     width: 75%;
     display: flex;
     justify-content: space-evenly;
-
-    animation-duration: 10s;
-    animation-name: nav;
-}
-
-@keyframes nav{
-    0% {
-        display: none;
-    }
-    50% {
-        display: none;
-    }
-    75% {
-        display: contents;
-    }
 }
 
 header p a{
@@ -128,7 +97,7 @@ main{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    height: 85em;
+    height: 95em;
     border-radius: 25px 25px 5px 5px;
 
     animation-duration: 3s;
@@ -137,14 +106,14 @@ main{
 
 @keyframes welcoming {
     0%{
-        height: 75em;
+        height: 85em;
     }
     25%{
-        height: 75em;
+        height: 85em;
     }
 
     100%{
-        height: 85em;
+        height: 95em;
     }  
 }
 
@@ -181,6 +150,45 @@ h2{
     margin: 1em;
 }
 
+main form{
+    background-color: rgb(194, 194, 194);
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    border-width: 0.1em;
+    border-style: solid;
+    border-radius: 0.65em;
+    margin: 4em 0 6em 0;
+    padding: 2em;
+}
+
+main form label{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+main form input{
+    width: 50%;
+    height: 3em;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+
+    border-width: 0.1em;
+    border-style: solid;
+    border-radius: 0.65em;
+    margin-top: 1em;
+}
+
+.br{
+    width: 100%;
+}
+
+main form input[type=submit]{
+    width: 30%;
+}
 
 
 footer{
